 - Core: Fix ordering events when scheduling during events
 - GBA: Reset WAITCNT properly
 - GBA Serialize: Fix loading states in Hblank
 - PSP2: Fix more issues causing poor audio
 - GBA Memory: Fix Vast Fame support (taizou) (fixes mgba.io/i/1170)
 - GB, GBA Savedata: Fix unmasking savedata crash
 - GBA DMA: Fix temporal sorting of DMAs of different priorities
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
 - All: Make FIXED_ROM_BUFFER an option instead of 3DS-only
 - Qt: Redo GameController into multiple classes
 - Test: Restructure test suite into multiple executables
 - Python: Integrate tests from cinema test suite
 - Util: Don't build crc32 if the function already exists
 - GBA: Implement display start DMAs
 - Qt: Prevent window from being created off-screen
 - Qt: Add option to disable FPS display
 - GBA: Improve multiboot image detection
 - GB MBC: Remove erroneous bank 0 wrapping
 - GBA Cheats: Allow multiple ROM patches in the same slot
 - GB: Skip BIOS option now works
 - Libretro: Add frameskip option
 - GBA Memory: 64 MiB GBA Video cartridge support
 - PSP2: Use system enter key by default
 - 3DS: Remove deprecated CSND interface
 - Qt: Options to mess around with layer placement
 - GBA Savedata: Remove ability to disable realistic timing
 - Qt: Add load alternate save option
 - GB Audio: Improved audio quality
 - GB, GBA Audio: Increase max audio volume
 - GB: Fix VRAM/palette locking (fixes mgba.io/i/1109)
 - GB Video: Darken colors in GBA mode
 - FFmpeg: Support libswresample (fixes mgba.io/i/1120, mgba.io/b/123)
 - FFmpeg: Support lossless h.264 encoding
 - Feature: Added loading savestates from command line
 - Qt: Allow pausing game at load (fixes mgba.io/i/1129)
 - Wii: Move audio handling to callbacks (fixes mgba.io/i/803)
 - Qt: Clean up FPS target UI (fixes mgba.io/i/436)
 - Core: Remove broken option for whether rewinding restores save games

0.6.3: (2017-04-14)